directsoundsink: fix modulo math with ringbuffer parameters

To get a multiple of bpf use a subtraction and not an addition

https://bugzilla.gnome.org/show_bug.cgi?id=745684